--- a/index.html
+++ b/index.html
@@ -65,22 +65,22 @@
 				<h2>Наша команда</h2>
 				<ul>
 					<li>
-						<img src="./images/human-1.jpg" alt="Product Designer" />
+						<img src="./images/human-1.jpg" alt="Product Designer" width="270" height="260" />
 						<h3>Ігор Дем'яненко</h3>
 						<p>Product Designer</p>
 					</li>
 					<li>
-						<img src="./images/human-2.jpg" alt="Frontend Developer" />
+						<img src="./images/human-2.jpg" alt="Frontend Developer" width="270" height="260" />
 						<h3>Ольга Рєпіна</h3>
 						<p>Frontend Developer</p>
 					</li>
 					<li>
-						<img src="./images/human-3.jpg" alt="Marketing" />
+						<img src="./images/human-3.jpg" alt="Marketing" width="270" height="260" />
 						<h3>Микола Тарасов</h3>
 						<p>Marketing</p>
 					</li>
 					<li>
-						<img src="./images/human-4.jpg" alt="UI Designer" />
+						<img src="./images/human-4.jpg" alt="UI Designer" width="270" height="260" />
 						<h3>Михайло Єрмаков</h3>
 						<p>UI Designer</p>
 					</li>
